@@ -1,3 +1,10 @@
+Thu Nov 20 18:20:01 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>
+
+        * dds/DCPS/transport/tcp/TcpConnection.cpp:
+
+          Add some debug messages to handle_close() and the various
+          reconnect paths.
+
 Thu Nov 20 17:54:16 UTC 2014  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/transport/framework/TransportImpl.h:
